# psuu

./: .gitignore  LICENSE  README.md  SUMMARY.md  WAYS_TO_RUN.md  diagrams.md  pyproject.toml  requirements.txt  run_cadcad_sandbox.py  run_server.py  setup.py
custom_connectors/: __init__.py
data/simulations/: test_run-2025_03_25_12_06_22.json  test_run-2025_03_25_12_09_18.json  test_run-2025_03_25_12_09_18_timeseries.csv
docs/: api_reference.md  configuration.md  custom_connectors.md  error_handling.md  getting_started.md  index.md  lessons_learned.md  model_cloning.md  model_protocol.md
examples/: README.md  cadcad_integration.py  run_template_model.py  sir_cadcad_optimization.py  sir_cadcad_optimization_final.py  sir_cadcad_optimization_fixed.py
examples/basic_usage/: custom_optimizer_example.py  quick_optimize_example.py  simple_sir_optimization.py
examples/cli_usage/: advanced_cli_example.sh  basic_cli_example.sh  create_custom_kpi.py
examples/protocol_example/: __init__.py  run_sir_model.py  sir_config.yaml  sir_model.py
frontend/: README.md  package-lock.json  package.json
psuu/: __init__.py  __main__.py  cli.py  clone_model.py  config.py  data_aggregator.py  exceptions.py  experiment.py  results.py  simulation_connector.py  validation.py
psuu/custom_connectors/: cadcad_connector.py
psuu/optimizers/: __init__.py  base.py  bayesian.py  grid_search.py  random_search.py
template/: README-TEMPLATE.md  README.md  __init__.py  __main__.py  core_logic.py  kpi.py  model.py  params.py  sir_config.yaml
tests/: __init__.py  test_simulation_connector.py
(+13 files in other folders)
